# helios_revision

./: A1_decision_summary.md  CMakeLists.txt  README.md  helios_A1_followup_agent_brief.md  helios_agent_message.md  helios_summary_consolidated.md  run_parallel_scaling.sh  run_test.sh
analysis/: A1_report.md  a1_experiments.py  a1_experiments_5.py  a1_experiments_6.py  cost_sweep.py  plot_scaling.py
analysis/outputs/: A1_2_copacking.csv  A1_3_grouping.csv  A1_4_orientation.csv  A1_5_predicate.csv  A1_5_sensitivity.csv  A1_6_gate0.txt  A1_6_interaction.csv  A1_6_leakage.csv  A1_report.md  SYNTHETIC_DRAFT_a1_summary.json  SYNTHETIC_DRAFT_paper_sweep.csv  SYNTHETIC_DRAFT_sweep_results.csv  SYNTHETIC_DRAFT_table1_calibrated.csv
app/: CMakeLists.txt
app/gpu_bench/: CMakeLists.txt  helios_gpu_bench.cu
app/helios_bench/: CMakeLists.txt  helios_bucket_bench.cpp
app/omp/: CMakeLists.txt  tpch12_omp.cpp  tpch14_omp.cpp  tpch17_omp.cpp  tpch19_omp.cpp  tpch1_omp.cpp  tpch4_omp.cpp  tpch6_omp.cpp  tpch8_omp.cpp
app/tpch/: CMakeLists.txt  tpch1.cpp  tpch12.cpp  tpch14.cpp  tpch17.cpp  tpch19.cpp  tpch4.cpp  tpch6.cpp  tpch8.cpp
bfv_core/: CMakeLists.txt  bfv_params.cuh  galois.cu  galois.cuh  ks_ip.cu  ks_ip.cuh  ntt.cu  ntt.cuh  poly_ops.cu  poly_ops.cuh  rns.cu  rns.cuh
bfv_core/verify/: verify_layer1.cu
bfv_layer2/: CMakeLists.txt  bfv_context.cu  bfv_context.cuh  bfv_encode.cu  bfv_encode.cuh  bfv_encrypt.cu  bfv_encrypt.cuh  bfv_keygen.cu  bfv_keygen.cuh  bfv_rotate.cu  bfv_rotate.cuh  bfv_types.cu  bfv_types.cuh
bfv_layer2/verify/: verify_layer2_1.cu  verify_layer2_2.cu
include/nshedb/: nshedb.h
include/nshedb/core/: comparator.h
include/nshedb/predicates/: predicates.h
include/nshedb/utils/: conversion.h  date_utils.h  math_utils.h  seal_examples.h  timer.h
include/nshedb_gpu/: nshedb_gpu.h
include/nshedb_gpu/core/: comparator_gpu.cuh
include/nshedb_gpu/predicates/: predicates_gpu.cuh
include/nshedb_gpu/utils/: cache_bridge.h  conversion_gpu.h  math_utils_gpu.h
src/: CMakeLists.txt
src/core/: comparator.cpp
src/gpu/: CMakeLists.txt
src/gpu/core/: comparator_gpu.cu
src/gpu/predicates/: predicates_gpu.cu
src/gpu/utils/: math_utils_gpu.cpp
src/predicates/: predicates.cpp
src/utils/: math_utils.cpp
togepi/: 20260621  bench_1974x1028.txt  bench_256x512.txt  bench_512x256.txt  bench_quick.txt  helios_bench_results.csv  helios_calib.txt
